# ruuvitag_fw

./: .gitignore  .gitmodules  CMakeLists.txt  HOW_TO_CONTRIBUTE.md  Makefile  README.md  bootstrap  default-config.cmake  licenses.md  ruuvitag_b1.h  toolchain-gcc-arm.cmake
app/ruuvitag-demo/: CMakeLists.txt  app_demo_proj.c  app_ruuvitag_proj.h  config.cmake  da14580_config.h  startup_ARMCM0.S
app/ruuvitag-demo/system/: app_sleep.h  periph_setup.c  periph_setup.h
ble_app_beacon_example/: main.c
ble_app_beacon_example/config/: nrf_drv_config.h  pstorage_platform.h
ble_app_uart_example/: main.c
ble_app_uart_example/config/: pstorage_platform.h
board_configs/: custom_board.h  ruuvitag_b1.h  ruuvitag_b2.h  ruuvitag_b3.h
bootloader/: README.md  dfu.eww  dfu_ble_svc.c  dfu_gcc_nrf51.ld  dfu_gcc_nrf52.ld  dfu_public_key.c  main.c  nrf_ble_dfu.c
bootloader/config/: pstorage_platform.h
bootloader/config/dfu_dual_bank_serial_s132_pca10036/: nrf_drv_config.h
bootloader/ruuvitag_b3_debug/armgcc/: Makefile
bootloader/ruuvitag_b3_debug/config/: sdk_config.h
bootloader/ruuvitag_b3_production/armgcc/: Makefile
bootloader/ruuvitag_b_debug/armgcc/: Makefile  secure_dfu_gcc_nrf52_debug.ld
bootloader/ruuvitag_b_production/armgcc/: Makefile
bootloader/ruuvitag_b_production/config/: sdk_config.h
bsp/: README.md  arduino_primo.h  boards.c  boards.h  bsp.c  bsp.h  bsp_btn_ant.c  bsp_btn_ant.h  bsp_btn_ble.c  bsp_config_defines_dox_config.h  bsp_nfc.c  custom_board.h  d52_starterkit.h  n5_starterkit.h  nrf6310.h  pca10000.h  pca10001.h  pca10003.h  pca10028.h  pca10031.h  pca10036.h  pca10040.h  pca20006.h  ruuvitag_b.h  ruuvitag_b3.h  ruuvitag_b5.h  wt51822.h
builds/: README.md  ble_app_beacon.hex  ruuvitag_b2_bootloader_sdk11.hex  ruuvitag_b2_nfc_record_url_example_sdk11_works-only-without-softdevice.hex  ruuvitag_b3_eddystone_sdk11.hex
builds/distribution_packages/sdk11/: README.md
builds/distribution_packages/sdk12/: README.md
builds/hex/sdk12/: ble_app_beacon.hex  ruuvitag_b3_production_bootloader.hex  weather_station.hex
cmake/: tools.cmake
cmake/Platform/: Generic-gcc-da1458x.cmake
drivers/LIS2DH12/: LIS2DH12.c  LIS2DH12.h  LIS2DH12_registers.h
drivers/battery/: README.md  battery.c  battery_voltage.h  battery_voltage_saadc.c
drivers/bluetooth/: ble_bulk_transfer.c  ble_bulk_transfer.h  ble_event_handlers.c  ble_event_handlers.h  bluetooth_core.c  bluetooth_core.h  eddystone.c  eddystone.h
drivers/bme280/: bme280.c  bme280.h  bme280_platform.c  bme280_temperature_handler.c  bme280_temperature_handler.h
drivers/init/: README.md  bluetooth_config.h  bsp_config.h  init.c  init.c.orig  init.h  sdk_config.h
drivers/lis2dh12/: lis2dh12.c  lis2dh12.h  lis2dh1212_registers.h  lis2dh12_acceleration_handler.c  lis2dh12_acceleration_handler.h  lis2dh12_registers.h  readme.md
drivers/nrf_nordic_flash/: flash.c  flash.h
drivers/nrf_nordic_nfc/: nfc.c  nfc.h  nrf_nfc_handler.c  nrf_nfc_handler.h
drivers/nrf_nordic_pininterrupt/: pin_interrupt.c  pin_interrupt.h
drivers/nrf_nordic_watchdog/: watchdog.c  watchdog.h
drivers/pwm/: pwm.c  pwm.h
drivers/rng/: rng.c  rng.h
drivers/rtc/: rtc.c  rtc.h
drivers/spi/: spi.c  spi.h
eddystone_example/: README.md  eddystone.c  eddystone.h  main.c
experimental_ble_app_eddystone/: bme280.c  bme280.h  experimental_ble_app_eddystone.eww  main.c  spi.c  spi.h
experimental_ble_app_eddystone/config/: sdk_config.h
fw/: license.txt  main.c
fw/config/: nrf_drv_config.h
fw/ruuvitag_revb1/armgcc/: Makefile  template_gcc_nrf52.ld
libraries/acceleration/: acceleration.c  acceleration.h
libraries/allocator_stub/: allocator_stub.c  allocator_stub.h
libraries/base64/: base64.c  base64.h
libraries/bluetooth/: bluetooth_core.c  bluetooth_core.h  eddystone.c  eddystone.h
libraries/data_structures/: ringbuffer.c  ringbuffer.h
libraries/dsp/: dsp.c  dsp.h  stdev.c  stdev.h
libraries/eddystone/: eddystone.c  eddystone.h
libraries/rust_allocator/: README.md  rust_allocator.c  rust_allocator.h
libraries/ruuvi_sensor_formats/: chain_channels.c  chain_channels.h  ruuvi_endpoints.c  ruuvi_endpoints.h  sensortag.c  sensortag.h
licenses/: Ruuvi licenses.md  micro-ecc.md  nordic_sdk_license.md  nordic_softdevice_license.md
nfc_record_url_example/: main.c  nfc_url_record.eww
nfc_record_url_example/config/: nrf_drv_config.h  sdk_config.h
nfc_record_url_example_alpha11/: main.c
production_builds/: README.md  ruuvitag_b1_bootloader_sdk092.hex  ruuvitag_b2_bootloader.hex  ruuvitag_b2_nfc_url_record_example.hex
ruuvi_examples/ble_app_beacon/: ble_app_beacon.eww  main.c
ruuvi_examples/eddystone/: bluetooth_application_config.h  es_app_config.h  event_handlers.c  event_handlers.h  main.c  readme.md  sdk_application_config.h
ruuvi_examples/iota_uart/: README.md  libiota.h  libiota_mam_bindings.a.alt2  libiota_mam_bindings.a.upstream  main.c
ruuvi_examples/nfc_record_url/: bluetooth_application_config.h  main.c  sdk_application_config.h
ruuvi_examples/ruuvi_firmware/: application_config.h  bluetooth_application_config.h  initialize.c  initialize.h  main.c  packit.c  packit.h  readme.md  sdk_application_config.h
ruuvi_examples/template_app/: init.c  init.h  main.c  readme.md
ruuvi_examples/test_drivers/: README.md  bluetooth_application_config.h  libiota.h  main.c  mam.c  mam.h  sdk_application_config.h
ruuvi_examples/weather_station/: changelog.md  main.c
ruuvi_examples/web-bluetooth/: Readme.txt  application.c  application.h  ble_acceleration_service.c  ble_acceleration_service.h  ble_bas.c  ble_bas.h  ble_dis.c  ble_dis.h  ble_ess.c  ble_ess.h  ble_nordic_uart_service.c  ble_nordic_uart_service.h  ble_tps.c  ble_tps.h  event_handlers.c  event_handlers.h  main.c  service_if.c  service_if.h
sdk/: 580.lds.S  CMakeLists.txt  sdk.cmake
sdk/patch/: arch.patch  compiler.patch  rwble.patch
sdk_overrides/: app_button.c  ble_advdata.c  ble_radio_notification.c  es_battery_voltage_saadc.c  hal_nfc_t2t.c  nrf_drv_wdt.c
sdk_patch/: 0001-dfu_app_handler.patch  0002-device_manager_cnfg.patch
(+160 files in other folders)
